--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 :root {
   --color-primary-dark: #282c34;
   --color-primary-light: #ffffff;
+  --color-react: #61dafb;
 
 }
 
@@ -29,10 +30,13 @@
   color: white;
   height: 10vh;
   padding: 0em 2em;
+  /* Add a buttom border */
+  border-bottom: 1px solid var(--color-react);
 }
 
 .App-link {
-  color: #61dafb;
+  color: var(--color-react);
+
 }
 
 @keyframes App-logo-spin {
@@ -62,7 +66,6 @@
   min-height: 90vh;
   flex-direction: row;
   justify-content: center;
-  background-color: var(--color-primary-light);
 }
 
 /* Left Bar */
@@ -76,6 +79,8 @@
   background-color: var(--color-primary-dark);
   justify-content: flex-start;
   color: #ffffff;
+  /* add a right border */
+  border-right: 1px solid var(--color-react);
 }
 
 .personalData {
@@ -87,6 +92,7 @@
 .RightBar {
   width: 100%;
   padding: 4em;
+  color: #ffffff;
 }
 
 .blogImg {
@@ -95,4 +101,13 @@
 
 .blogImg img {
   height: 20em;
+}
+
+.particles {
+  position: fixed;
+  z-index: -1;
+  /* cover all screen */
+  width: 100%;
+  height: 100%;
+
 }
