--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,10 @@
 
 :root {
   --color-primary-dark: #282c34;
+  --color-primary-dark-fade: #282c34d9;
   --color-primary-light: #ffffff;
   --color-react: #61dafb;
-
+  --color-react-fade: #61dafb3b;
 }
 
 .App {
@@ -23,7 +24,7 @@
 }
 
 .App-header {
-  background-color: var(--color-primary-dark);
+  background-color: var(--color-primary-dark-fade);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -31,12 +32,11 @@
   height: 10vh;
   padding: 0em 2em;
   /* Add a buttom border */
-  border-bottom: 1px solid var(--color-react);
+  border-bottom: 1px solid var(--color-react-fade);
 }
 
 .App-link {
   color: var(--color-react);
-
 }
 
 @keyframes App-logo-spin {
@@ -52,6 +52,7 @@
   margin-right: auto;
 }
 .header-menu {
+  font-size: 1.3em;
   display: flex;
   align-items: center;
 }
@@ -76,11 +77,11 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  background-color: var(--color-primary-dark);
+  background-color: var(--color-primary-dark-fade);
   justify-content: flex-start;
   color: #ffffff;
   /* add a right border */
-  border-right: 1px solid var(--color-react);
+  border-right: 1px solid var(--color-react-fade);
 }
 
 .personalData {
@@ -102,6 +103,32 @@
 .blogImg img {
   height: 20em;
 }
+.blogImg a:visited{
+  color: var(--color-primary-light);
+}
+.blogImg a{
+  color: var(--color-primary-light);
+}
+.blogImg a:hover{
+  color: var(--color-react);
+}
+
+.blog-ul li a:visited {
+  color: var(--color-primary-light);
+}
+.blog-ul li a:hover {
+  color: var(--color-react);
+}
+
+.blog-ul li{
+  display: inline;
+  margin-right: 1em;
+}
+.blog-ul li:not(:last-child):after {
+  margin-left: 1em;
+  content: "|";
+}
+
 
 .particles {
   position: fixed;
@@ -109,5 +136,12 @@
   /* cover all screen */
   width: 100%;
   height: 100%;
+  top: 0;
+  left: 0;
+}
 
+.returnBtn {
+  margin-top: 2em;
+  margin-bottom: 2em;
+  display: none;
 }
