--- a/src/Style.css
+++ b/src/Style.css
@@ -72,6 +72,7 @@
 /* Left Bar */
 
 .LeftBar {
+  padding: 1em;
   width: 20vw;
   display: flex;
   align-items: center;
@@ -92,7 +93,7 @@
 
 .RightBar {
   width: 100%;
-  padding: 4em;
+  padding: 1em 4em;
   color: #ffffff;
 }
 
@@ -144,4 +145,38 @@
   margin-top: 2em;
   margin-bottom: 2em;
   display: none;
+}
+
+.tool-tip{
+  z-index: 1;
+  pointer-events: none;
+  user-select: none;
+
+  box-shadow: #282c34;
+  padding: 1em;
+  font-size: 0.8em;
+  border-radius: 8px;
+
+  opacity: 0;
+  transition: opacity 0.3s;
+
+  background-color: var(--color-primary-dark-fade);
+  color: var(--color-primary-light);
+
+}
+
+:has(> .tool-tip) {
+  position: relative;
+}
+
+:has(> .tool-tip):hover .tool-tip {
+  opacity: 1;
+}
+
+.profilePic {
+  text-align: center;
+}
+
+.profilePic img{
+  border-radius: 4px;
 }
