--- a/src/Style.css
+++ b/src/Style.css
@@ -9,7 +9,7 @@
   --color-react-fade: #61dafb3b;
 }
 
-a{
+a {
   color: var(--color-primary-light);
 }
 
@@ -48,6 +48,7 @@ a{
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -56,11 +57,13 @@ a{
 .App-header div:first-child {
   margin-right: auto;
 }
+
 .header-menu {
   font-size: 1.3em;
   display: flex;
   align-items: center;
 }
+
 .header-menu div {
   margin-left: 1em;
 }
@@ -109,12 +112,15 @@ a{
 .blogImg img {
   height: 20em;
 }
+
 .blogImg a:visited {
   color: var(--color-primary-light);
 }
+
 .blogImg a {
   color: var(--color-primary-light);
 }
+
 .blogImg a:hover {
   color: var(--color-react);
 }
@@ -127,6 +133,7 @@ a{
 .blog-ul li a:visited {
   color: var(--color-primary-light);
 }
+
 .blog-ul li a:hover {
   color: var(--color-react);
 }
@@ -136,6 +143,7 @@ a{
   margin-right: 1em;
   font-size: 1em;
 }
+
 .blog-ul li:not(:last-child):after {
   margin-left: 1em;
   content: "|";
@@ -193,6 +201,7 @@ a{
 .work-data {
   align-items: center;
 }
+
 .container-data {
   display: flex;
   flex-direction: column;
@@ -204,24 +213,49 @@ a{
   border: 1px solid var(--color-react-fade);
 }
 
-.container-data div{
+.container-data div {
   max-width: 900px;
   margin: auto;
 }
 
-.container-data div ul{
+.container-data div ul {
   margin: 0;
   padding: 0;
 
 }
 
-.skills-data li{
+.skills-data li {
   margin-left: 2em;
 }
-.skills-data ul{
+
+.skills-data ul {
   columns: 2;
 }
 
-.NavLinkBlog{
+.NavLinkBlog {
   text-underline-offset: 2px;
+}
+
+.language-switcher {
+  display: flex;
+  gap: 0.75rem;
+  position: absolute;
+  top: 10px;
+  right: 30px;
+}
+
+.language-switcher button {
+  background-color: transparent;
+  border: 1px solid cyan;
+  color: cyan;
+  padding: 4px 8px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: background-color 0.2s ease, color 0.2s ease;
+}
+
+.language-switcher button:hover {
+  background-color: cyan;
+  color: black;
 }
